--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -1240,7 +1240,7 @@ publisher = "Wiley-Blackwell",
   journaltitle = {Transactions of the Association for Computational Linguistics (TACL)},
 }
 
-@InProceedings{2007.Klapaftis.UOY,
+@InProceedings{2007.Klapaftis.UoY,
   author    = {Klapaftis, Ioannis P. and Manandhar, Suresh},
   title     = {UOY: A Hypergraph Model for Word Sense Induction \& Disambiguation},
   booktitle = {Proceedings of the 4th International Workshop on Semantic Evaluations},
